baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__array_map_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_map_pure"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int[]"
      WORD "int"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "items"
          COLON ":"
          TYPE_EXPR "int[]"
            WORD "int"
            L_BRACKET "["
            R_BRACKET "]"
          EQUALS "="
          ARRAY_LITERAL "[1, 2, 3]"
            L_BRACKET "["
            INTEGER_LITERAL "1"
            COMMA ","
            INTEGER_LITERAL "2"
            COMMA ","
            INTEGER_LITERAL "3"
            R_BRACKET "]"
        CALL_EXPR
          PATH_EXPR "items.map"
            WORD "items"
            DOT "."
            WORD "map"
          CALL_ARGS
            L_PAREN "("
            LAMBDA_EXPR
              PARAMETER_LIST
                L_PAREN "("
                PARAMETER "x"
                  WORD "x"
                R_PAREN ")"
              ARROW "->"
              BLOCK_EXPR
                L_BRACE "{"
                BINARY_EXPR "x * 2"
                  WORD "x"
                  STAR "*"
                  INTEGER_LITERAL "2"
                R_BRACE "}"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_map_throwing"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int[]"
      WORD "int"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "items"
          COLON ":"
          TYPE_EXPR "int[]"
            WORD "int"
            L_BRACKET "["
            R_BRACKET "]"
          EQUALS "="
          ARRAY_LITERAL "[1, 2, 3]"
            L_BRACKET "["
            INTEGER_LITERAL "1"
            COMMA ","
            INTEGER_LITERAL "2"
            COMMA ","
            INTEGER_LITERAL "3"
            R_BRACKET "]"
        CALL_EXPR
          PATH_EXPR "items.map"
            WORD "items"
            DOT "."
            WORD "map"
          CALL_ARGS
            L_PAREN "("
            LAMBDA_EXPR
              PARAMETER_LIST
                L_PAREN "("
                PARAMETER "x"
                  WORD "x"
                R_PAREN ")"
              ARROW "->"
              BLOCK_EXPR
                L_BRACE "{"
                IF_EXPR
                  KW_IF "if"
                  PAREN_EXPR
                    L_PAREN "("
                    BINARY_EXPR "x == 2"
                      WORD "x"
                      EQUALS_EQUALS "=="
                      INTEGER_LITERAL "2"
                    R_PAREN ")"
                  BLOCK_EXPR
                    L_BRACE "{"
                    THROW_STMT
                      THROW_EXPR
                        KW_THROW "throw"
                        STRING_LITERAL "found two"
                          QUOTE """
                          WORD "found"
                          WORD "two"
                          QUOTE """
                    R_BRACE "}"
                BINARY_EXPR "x * 2"
                  WORD "x"
                  STAR "*"
                  INTEGER_LITERAL "2"
                R_BRACE "}"
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
