baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__explicit_param_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "apply_explicit"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "f"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
          THROWS_CLAUSE
            KW_THROWS "throws"
            TYPE_EXPR "string"
              WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_explicit_param_pure"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "apply_explicit"
          CALL_ARGS
            L_PAREN "("
            LAMBDA_EXPR
              PARAMETER_LIST "()"
                L_PAREN "("
                R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
              BLOCK_EXPR "{ 42 }"
                L_BRACE "{"
                INTEGER_LITERAL "42"
                R_BRACE "}"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_explicit_param_throwing"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "apply_explicit"
          CALL_ARGS
            L_PAREN "("
            LAMBDA_EXPR
              PARAMETER_LIST "()"
                L_PAREN "("
                R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
              BLOCK_EXPR
                L_BRACE "{"
                THROW_STMT
                  THROW_EXPR
                    KW_THROW "throw"
                    STRING_LITERAL "ok"
                      QUOTE """
                      WORD "ok"
                      QUOTE """
                R_BRACE "}"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "apply_pure_only"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "f"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
          THROWS_CLAUSE
            KW_THROWS "throws"
            TYPE_EXPR "never"
              WORD "never"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_pure_only_pure"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "apply_pure_only"
          CALL_ARGS
            L_PAREN "("
            LAMBDA_EXPR
              PARAMETER_LIST "()"
                L_PAREN "("
                R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
              BLOCK_EXPR "{ 42 }"
                L_BRACE "{"
                INTEGER_LITERAL "42"
                R_BRACE "}"
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
