baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__fn_type_alias_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "ThrowingCallback"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
      THROWS_CLAUSE
        KW_THROWS "throws"
        TYPE_EXPR "string"
          WORD "string"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "PureCallback"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "ExplicitPure"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
      THROWS_CLAUSE
        KW_THROWS "throws"
        TYPE_EXPR "never"
          WORD "never"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "NoThrow"
    EQUALS "="
    TYPE_EXPR "never"
      WORD "never"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "AliasPure"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
      THROWS_CLAUSE
        KW_THROWS "throws"
        TYPE_EXPR "NoThrow"
          WORD "NoThrow"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "Mapper"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "string"
        WORD "string"
      THROWS_CLAUSE
        KW_THROWS "throws"
        TYPE_EXPR "string"
          WORD "string"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "Wrapper"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
      THROWS_CLAUSE
        KW_THROWS "throws"
        TYPE_EXPR "string"
          WORD "string"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "use_alias_pure"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "f"
        COLON ":"
        TYPE_EXPR "AliasPure"
          WORD "AliasPure"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
